--- a/main-files/assets/scss/main.scss
+++ b/main-files/assets/scss/main.scss
@@ -80,4 +80,6 @@ Version: 1.0.0
 @import "dashboard";
 // >> Order History <<//
 @import "order-history";
+// >> Order Details <<//
+@import "order-details";
 //>> Template Section Style End <<//
