--- a/main-files/assets/scss/_order-details.scss
+++ b/main-files/assets/scss/_order-details.scss
@@ -237,8 +237,16 @@
 
           .progress-step:before {
             content: attr(data-step);
-            width: 40px;
-            height: 40px;
+            width: 35px;
+            height: 35px;
+            @include breakpoint(md) {
+              width: 38px;
+              height: 38px;
+            }
+            @include breakpoint(lg) {
+              width: 40px;
+              height: 40px;
+            }
             line-height: 36px;
             border: 1px dashed $theme-color;
             background-color: white;
@@ -292,6 +300,46 @@
           .progress-step.active .step-title {
             color: #4376fb;
             font-weight: 400;
+          }
+        }
+
+        .order-details-table {
+          .product-img {
+            width: 70px;
+            height: 70px;
+            object-fit: cover;
+            border-radius: 4px;
+          }
+
+          .table > :not(caption) > * > * {
+            padding: 1rem;
+            background: transparent;
+          }
+
+          .product-name {
+            font-weight: 500;
+            font-size: 14px;
+            color: $text-color-2;
+          }
+
+          .table-header {
+            font-size: 12px;
+            color: #5f5f5f;
+            font-weight: 500;
+            background-color: $theme-fade !important;
+          }
+
+          .price,
+          .quantity {
+            font-weight: 400;
+            font-size: 14px;
+            color: $text-color-2;
+          }
+
+          .subtotal {
+            font-weight: 500;
+            font-size: 14px;
+            color: $text-color-2;
           }
         }
       }
