--- a/main-files/assets/scss/main.scss
+++ b/main-files/assets/scss/main.scss
@@ -82,4 +82,6 @@ Version: 1.0.0
 @import "order-history";
 // >> Order Details <<//
 @import "order-details";
+// >> Settings <<//
+@import "settings";
 //>> Template Section Style End <<//
