--- a/main-files/assets/scss/_settings.scss
+++ b/main-files/assets/scss/_settings.scss
@@ -68,3 +68,52 @@
     }
   }
 }
+
+.billing-settings {
+  margin-top: 24px;
+  border: 1px solid $border-color-2;
+  border-radius: 8px;
+
+  &-heading {
+    padding: 16px 24px;
+    border-bottom: 1px solid $border-color-2;
+
+    h5 {
+      font-size: 20px;
+      font-weight: 500;
+      line-height: 30px;
+      text-align: left;
+      color: $text-color-2;
+    }
+  }
+
+  &-body {
+    padding: 24px;
+
+    label {
+      color: $text-color-2;
+      margin-bottom: 4px;
+      font-weight: 400;
+    }
+
+    input {
+      border-color: #e6e6e6;
+    }
+
+    input::placeholder {
+      font-weight: 400;
+      font-size: 16px;
+      color: #666;
+    }
+
+    button[type="submit"] {
+      background: $theme-color;
+      color: $white;
+      padding: 8px 32px;
+      border-radius: 43px;
+      font-weight: 600;
+      font-size: 14px;
+      margin-top: 30px;
+    }
+  }
+}
