--- a/main-files/assets/scss/_hero.scss
+++ b/main-files/assets/scss/_hero.scss
@@ -102,7 +102,7 @@
     }
   }
 
-  .here-details{
+  .here-details {
     border-top: 50px solid #346086;
     border-left: 50px solid #346086;
     padding-bottom: 50px;
@@ -550,7 +550,13 @@
 }
 
 .homepage-3 {
-  background: linear-gradient(145deg, #8d99ae 33.33%, #8d99ae 33.33%, #346086 66.66%, #346086 66.66%);
+  background: linear-gradient(
+    145deg,
+    #8d99ae 33.33%,
+    #8d99ae 33.33%,
+    #346086 66.66%,
+    #346086 66.66%
+  );
   height: 100vh;
   padding: 120px 0 120px;
   height: auto;
@@ -560,7 +566,7 @@
     color: white;
     width: 350px !important;
     height: 450px;
-    
+
     .swiper-slide {
       background: transparent;
       width: 100%;
@@ -632,5 +638,12 @@
         height: 20px;
       }
     }
+  }
+}
+
+.hero-4 {
+  &-container {
+    max-width: 1800px;
+    background-color: $bg-fade;
   }
 }
