Hompage 4 hero left side

--- a/main-files/assets/scss/_variables.scss
+++ b/main-files/assets/scss/_variables.scss
@@ -4,6 +4,7 @@
   --white: #fff;
   --theme: #4376fb;
   --theme-fade: #4377fb21;
+  --theme-fade-2: #4377fb62;
   --theme2: #ffbf25;
   --header: #000000;
   --text: #555555;
@@ -31,3 +32,4 @@ $border-color-2: var(--border-2);
 $bg-color: var(--bg);
 $shadow: var(--box-shadow);
 $footer-3: var(--footer);
+$theme-fade-2: var(--theme-fade-2);
