--- a/main-files/assets/scss/_hero.scss
+++ b/main-files/assets/scss/_hero.scss
@@ -644,6 +644,144 @@
 .hero-4 {
   &-container {
     max-width: 1800px;
-    background-color: $bg-fade;
+    background-color: $theme-fade;
+    border-radius: 40px;
+    padding: 10px 75px;
+    border: 1px solid $theme-fade-2;
+
+    .hero-4-left-content {
+      .hero-4-offer {
+        color: $text-color-2 !important;
+        font-size: 16px;
+        font-weight: 500;
+        span {
+          color: $theme-color;
+        }
+      }
+
+      .hero-4-title {
+        color: $black;
+        font-size: 48px;
+        font-weight: 600;
+        line-height: 50px;
+        letter-spacing: -0.03em;
+        text-align: left;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        text-transform: unset;
+      }
+
+      .hero-4-subtitle {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 26px;
+        letter-spacing: -0.01em;
+        text-align: left;
+        color: $text-color-2;
+      }
+
+      .hero-4-specification {
+        background-color: $white;
+        width: fit-content;
+        border-radius: 20px;
+        padding: 30px;
+        margin-top: 30px;
+        align-items: center;
+        display: flex;
+        gap: 30px;
+
+        p {
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 26px;
+          letter-spacing: -0.01em;
+          text-align: left;
+          color: #bebebe;
+          margin-bottom: 18px;
+        }
+
+        hr {
+          width: 1px;
+          background: #000;
+        }
+
+        h5 {
+          font-size: 24px;
+          font-weight: 600;
+          line-height: 26px;
+          letter-spacing: -0.01em;
+          text-align: left;
+          color: $text-color-2;
+        }
+
+        .hero-4-colors {
+          margin-right: 110px;
+
+          .colors {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+
+            div:nth-child(1) {
+              background: #770215;
+              width: 16px;
+              height: 16px;
+              border-radius: 50%;
+            }
+
+            div:nth-child(2) {
+              background: #e9cf10;
+              width: 16px;
+              height: 16px;
+              border-radius: 50%;
+            }
+
+            div:nth-child(3) {
+              background: #35424b;
+              width: 16px;
+              height: 16px;
+              border-radius: 50%;
+            }
+          }
+        }
+
+        .hero-4-img {
+          &-overlay {
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.5);
+            border-radius: 40px;
+            z-index: 1;
+          }
+        }
+      }
+
+      .hero-4-btns {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-top: 55px;
+
+        button {
+          padding: 10px 20px;
+          color: $white;
+          font-size: 16px;
+          font-weight: 600;
+          line-height: 26px;
+          letter-spacing: -0.01em;
+          border-radius: 100px;
+        }
+
+        button:first-child {
+          background: $theme-color;
+        }
+
+        button:last-child {
+          background: $black;
+        }
+      }
+    }
   }
 }
