--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -5,7 +5,7 @@ Author URI: https://themeforest.net/user/namespace-it
 Description: RevAuto - Car Dealer & Services Html Template
 Version: 1.0.0
 */
-/*CSS Table Of Content Ends Here*/
+/* CSS Table Of Content Ends Here */
 @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
@@ -3533,8 +3533,54 @@ span {
   max-width: 1800px;
   background-color: var(--theme-fade);
   border-radius: 40px;
-  padding: 10px 75px;
   border: 1px solid var(--theme-fade-2);
+  padding: 20px;
+}
+@media (min-width: 768px) {
+  .hero-4-container {
+    padding: 30px;
+  }
+}
+@media (min-width: 1400px) {
+  .hero-4-container {
+    padding: 10px 75px 25px;
+    padding-top: 100px;
+  }
+}
+@media (min-width: 1200px) {
+  .hero-4-container {
+    padding: 10px 60px 20px;
+    padding-top: 80px;
+  }
+}
+@media (min-width: 1200px) {
+  .hero-4-container {
+    padding: 10px 50px 20px;
+    padding-top: 60px;
+  }
+}
+.hero-4-container .hero-4-left-padding {
+  margin-top: 50px;
+}
+@media (min-width: 992px) {
+  .hero-4-container .hero-4-left-padding {
+    padding-left: 100px;
+  }
+}
+@media (min-width: 1200px) {
+  .hero-4-container .hero-4-left-padding {
+    padding-left: 170px;
+  }
+}
+@media (min-width: 1400px) {
+  .hero-4-container .hero-4-left-padding {
+    padding-left: 188px;
+  }
+}
+@media (min-width: 992px) {
+  .hero-4-container .hero-4-left-padding {
+    margin-top: 0px;
+  }
 }
 .hero-4-container .hero-4-left-content .hero-4-offer {
   color: var(--text-2) !important;
@@ -3551,9 +3597,39 @@ span {
   line-height: 50px;
   letter-spacing: -0.03em;
   text-align: left;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   text-transform: unset;
+}
+@media (min-width: 1400px) {
+  .hero-4-container .hero-4-left-content .hero-4-title {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+}
+@media (min-width: 1200px) {
+  .hero-4-container .hero-4-left-content .hero-4-title {
+    margin-top: 25px;
+    margin-bottom: 25px;
+  }
+}
+@media (min-width: 992px) {
+  .hero-4-container .hero-4-left-content .hero-4-title {
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
+}
+@media (min-width: 768px) {
+  .hero-4-container .hero-4-left-content .hero-4-title {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+}
+@media (min-width: 576px) {
+  .hero-4-container .hero-4-left-content .hero-4-title {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 }
 .hero-4-container .hero-4-left-content .hero-4-subtitle {
   font-size: 16px;
@@ -3569,9 +3645,30 @@ span {
   border-radius: 20px;
   padding: 30px;
   margin-top: 30px;
+  gap: 30px;
   align-items: center;
   display: flex;
-  gap: 30px;
+}
+@media (min-width: 1400px) {
+  .hero-4-container .hero-4-left-content .hero-4-specification {
+    padding: 30px;
+    margin-top: 30px;
+    gap: 30px;
+  }
+}
+@media (min-width: 1200px) {
+  .hero-4-container .hero-4-left-content .hero-4-specification {
+    padding: 25px;
+    margin-top: 25px;
+    gap: 25px;
+  }
+}
+@media (min-width: 992px) {
+  .hero-4-container .hero-4-left-content .hero-4-specification {
+    padding: 20px;
+    margin-top: 20px;
+    gap: 20px;
+  }
 }
 .hero-4-container .hero-4-left-content .hero-4-specification p {
   font-size: 16px;
@@ -3580,7 +3677,22 @@ span {
   letter-spacing: -0.01em;
   text-align: left;
   color: #bebebe;
-  margin-bottom: 18px;
+  margin-bottom: 8px;
+}
+@media (min-width: 1400px) {
+  .hero-4-container .hero-4-left-content .hero-4-specification p {
+    margin-bottom: 18px;
+  }
+}
+@media (min-width: 1200px) {
+  .hero-4-container .hero-4-left-content .hero-4-specification p {
+    margin-bottom: 15px;
+  }
+}
+@media (min-width: 992px) {
+  .hero-4-container .hero-4-left-content .hero-4-specification p {
+    margin-bottom: 12px;
+  }
 }
 .hero-4-container .hero-4-left-content .hero-4-specification hr {
   width: 1px;
@@ -3594,8 +3706,10 @@ span {
   text-align: left;
   color: var(--text-2);
 }
-.hero-4-container .hero-4-left-content .hero-4-specification .hero-4-colors {
-  margin-right: 110px;
+@media (min-width: 576px) {
+  .hero-4-container .hero-4-left-content .hero-4-specification .hero-4-colors {
+    margin-right: 110px;
+  }
 }
 .hero-4-container .hero-4-left-content .hero-4-specification .hero-4-colors .colors {
   display: flex;
@@ -3649,6 +3763,93 @@ span {
 }
 .hero-4-container .hero-4-left-content .hero-4-btns button:last-child {
   background: var(--black);
+}
+.hero-4-container .hero-4-right-content .hero-4-main-img {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+@media (min-width: 992px) {
+  .hero-4-container .hero-4-right-content .hero-4-main-img {
+    max-width: 450px;
+  }
+}
+.hero-4-container .hero-4-right-content .hero-4-main-img img {
+  width: 100%;
+  height: 100%;
+}
+@media (min-width: 576px) {
+  .hero-4-container .hero-4-right-content .hero-4-main-img img {
+    max-width: 470px;
+    max-height: 575px;
+  }
+}
+.hero-4-container .hero-4-right-content .hero-4-main-img .hero-4-bgs {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -10;
+}
+.hero-4-container .hero-4-right-content .hero-4-main-img .hero-4-bgs svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.hero-4-container .hero-4-right-content .hero-4-main-img .hero-4-pagination {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 50px;
+  z-index: 1;
+}
+.hero-4-container .hero-4-right-content .hero-4-main-img .hero-4-pagination div div {
+  width: 7px;
+  height: 7px;
+  background: var(--text);
+  border-radius: 50%;
+  cursor: pointer;
+}
+.hero-4-container .hero-4-right-content .hero-4-main-img .hero-4-pagination div.active {
+  padding: 8px;
+  background: transparent;
+  border: 1px solid var(--theme);
+  border-radius: 50%;
+  cursor: pointer;
+}
+.hero-4-container .hero-4-right-content .hero-4-main-img .hero-4-pagination div.active div {
+  background: var(--theme);
+}
+.hero-4-container .hero-4-right-content .hero-4-slider-navigation {
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+  gap: 30px;
+}
+.hero-4-container .hero-4-right-content .hero-4-slider-navigation div {
+  width: 114px;
+  height: 114px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: var(--theme-fade);
+}
+.hero-4-container .hero-4-right-content .hero-4-slider-navigation div img {
+  width: 48px;
+  height: 60px;
+  object-fit: cover;
+}
+.hero-4-container .hero-4-right-content .hero-4-slider-navigation div.active {
+  background: var(--white);
 }
 
 .mean-container a.meanmenu-reveal {
