--- a/main-files/assets/scss/_hero.scss
+++ b/main-files/assets/scss/_hero.scss
@@ -646,8 +646,40 @@
     max-width: 1800px;
     background-color: $theme-fade;
     border-radius: 40px;
-    padding: 10px 75px;
     border: 1px solid $theme-fade-2;
+    padding: 20px;
+    @include breakpoint(md) {
+      padding: 30px;
+    }
+    @include breakpoint(xxl) {
+      padding: 10px 75px 25px;
+      padding-top: 100px;
+    }
+    @include breakpoint(xl) {
+      padding: 10px 60px 20px;
+      padding-top: 80px;
+    }
+    @include breakpoint(xl) {
+      padding: 10px 50px 20px;
+      padding-top: 60px;
+    }
+
+    .hero-4-left-padding {
+      @include breakpoint(lg) {
+        padding-left: 100px;
+      }
+      @include breakpoint(xl) {
+        padding-left: 170px;
+      }
+
+      @include breakpoint(xxl) {
+        padding-left: 188px;
+      }
+      margin-top: 50px;
+      @include breakpoint(lg) {
+        margin-top: 0px;
+      }
+    }
 
     .hero-4-left-content {
       .hero-4-offer {
@@ -666,8 +698,28 @@
         line-height: 50px;
         letter-spacing: -0.03em;
         text-align: left;
-        margin-top: 30px;
-        margin-bottom: 30px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        @include breakpoint(xxl) {
+          margin-top: 30px;
+          margin-bottom: 30px;
+        }
+        @include breakpoint(xl) {
+          margin-top: 25px;
+          margin-bottom: 25px;
+        }
+        @include breakpoint(lg) {
+          margin-top: 30px;
+          margin-bottom: 20px;
+        }
+        @include breakpoint(md) {
+          margin-top: 30px;
+          margin-bottom: 30px;
+        }
+        @include breakpoint(sm) {
+          margin-top: 20px;
+          margin-bottom: 20px;
+        }
         text-transform: unset;
       }
 
@@ -686,9 +738,26 @@
         border-radius: 20px;
         padding: 30px;
         margin-top: 30px;
+        gap: 30px;
+
+        @include breakpoint(xxl) {
+          padding: 30px;
+          margin-top: 30px;
+          gap: 30px;
+        }
+        @include breakpoint(xl) {
+          padding: 25px;
+          margin-top: 25px;
+          gap: 25px;
+        }
+        @include breakpoint(lg) {
+          padding: 20px;
+          margin-top: 20px;
+          gap: 20px;
+        }
+
         align-items: center;
         display: flex;
-        gap: 30px;
 
         p {
           font-size: 16px;
@@ -697,7 +766,16 @@
           letter-spacing: -0.01em;
           text-align: left;
           color: #bebebe;
-          margin-bottom: 18px;
+          margin-bottom: 8px;
+          @include breakpoint(xxl) {
+            margin-bottom: 18px;
+          }
+          @include breakpoint(xl) {
+            margin-bottom: 15px;
+          }
+          @include breakpoint(lg) {
+            margin-bottom: 12px;
+          }
         }
 
         hr {
@@ -715,7 +793,9 @@
         }
 
         .hero-4-colors {
-          margin-right: 110px;
+          @include breakpoint(sm) {
+            margin-right: 110px;
+          }
 
           .colors {
             display: flex;
@@ -780,6 +860,105 @@
 
         button:last-child {
           background: $black;
+        }
+      }
+    }
+
+    .hero-4-right-content {
+      .hero-4-main-img {
+        position: relative;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        @include breakpoint(lg) {
+          max-width: 450px;
+        }
+
+        img {
+          @include breakpoint(sm) {
+            max-width: 470px;
+            max-height: 575px;
+          }
+          width: 100%;
+          height: 100%;
+        }
+
+        .hero-4-bgs {
+          position: absolute;
+          top: 45%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          z-index: -10;
+
+          svg {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+          }
+        }
+
+        .hero-4-pagination {
+          width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 20px;
+          margin-top: 50px;
+          z-index: 1;
+
+          div {
+            div {
+              width: 7px;
+              height: 7px;
+              background: $text-color;
+              border-radius: 50%;
+              cursor: pointer;
+            }
+
+            &.active {
+              padding: 8px;
+              background: transparent;
+              border: 1px solid $theme-color;
+              border-radius: 50%;
+              cursor: pointer;
+
+              div {
+                background: $theme-color;
+              }
+            }
+          }
+        }
+      }
+
+      .hero-4-slider-navigation {
+        display: flex;
+        align-items: end;
+        justify-content: center;
+        flex-direction: column;
+        height: 100%;
+        gap: 30px;
+
+        div {
+          width: 114px;
+          height: 114px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          border-radius: 50%;
+          background-color: $theme-fade;
+
+          img {
+            width: 48px;
+            height: 60px;
+            object-fit: cover;
+          }
+
+          &.active {
+            background: $white;
+          }
         }
       }
     }
