--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -1935,7 +1935,7 @@ span {
   margin-left: 7px;
 }
 .header-main .main-menu ul li a:hover {
-  color: #FFBF25 !important;
+  color: #ffbf25 !important;
 }
 .header-main .main-menu ul li .submenu {
   position: absolute;
@@ -2153,7 +2153,7 @@ span {
   line-height: 20px;
   height: 20px;
   border-radius: 20px;
-  background-color: #FEB81B;
+  background-color: #feb81b;
   color: var(--black);
   font-size: 14px;
   text-align: center;
@@ -2236,7 +2236,7 @@ span {
   height: 48px;
   line-height: 48px;
   border-radius: 50%;
-  border: 1px solid #D5D5D5;
+  border: 1px solid #d5d5d5;
   display: inline-block;
   text-align: center;
   color: var(--header);
@@ -2269,7 +2269,7 @@ span {
   height: 51px;
   line-height: 51px;
   border-radius: 50%;
-  border: 1px solid #D5D5D5;
+  border: 1px solid #d5d5d5;
   text-align: center;
 }
 .header-2 .header-right .menu-cart .cart-icon.style-2::before {
@@ -2284,7 +2284,7 @@ span {
   line-height: 20px;
   height: 20px;
   border-radius: 20px;
-  background-color: #FEB81B;
+  background-color: #feb81b;
   color: var(--black);
   font-size: 12px;
   text-align: center;
@@ -2321,7 +2321,7 @@ span {
   gap: 20px;
   font-size: 14px;
   border: none;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   padding: 16px 16px;
   border-radius: 8px 0px 0px 8px;
   font-weight: 300;
@@ -2373,7 +2373,7 @@ span {
 .header-2 .category-oneadjust .search-toggle-box .input-area input {
   outline: none;
   border: none;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   padding: 12px 16px;
   width: 100%;
   border-radius: 0px 8px 8px 0px;
@@ -2390,7 +2390,7 @@ span {
   top: 7px;
   right: 7px;
   color: var(--header);
-  background-color: #FFBF25;
+  background-color: #ffbf25;
   padding: 13px 16px;
   line-height: 1;
   font-size: 300px;
@@ -2420,7 +2420,7 @@ span {
   border: 1px solid var(--border);
 }
 .sticky.header-1 .header-right .menu-cart .cart-icon::before {
-  background-color: #FEB81B;
+  background-color: #feb81b;
 }
 .sticky.header-1 .header-right .menu-cart .cart-icon i {
   color: var(--header);
@@ -2693,6 +2693,87 @@ span {
   font-weight: 700;
   font-size: 40px;
   margin-bottom: 10px;
+}
+
+.navbar-2 .container {
+  max-width: 1800px !important;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.navbar-2 .container .navbar-2-left {
+  display: flex;
+  align-items: center;
+}
+.navbar-2 .container .navbar-2-right {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar-2 .container .navbar-2-right .navbar-2-menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  color: var(--text-2);
+  gap: 38px;
+}
+.navbar-2 .container .navbar-2-right .navbar-2-menu li a {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19.2px;
+  text-align: left;
+  transition: all 0.3s ease-in-out;
+}
+.navbar-2 .container .navbar-2-right .navbar-2-menu li a:hover {
+  color: var(--theme);
+}
+.navbar-2 .container .navbar-2-right .navbar-2-user-options {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.navbar-2 .container .navbar-2-right .navbar-2-user-options .search-wrapper {
+  max-width: 500px;
+}
+.navbar-2 .container .navbar-2-right .navbar-2-user-options .search-wrapper .search-input {
+  border-radius: 50px;
+  padding-left: 20px;
+  padding-right: 40px;
+}
+.navbar-2 .container .navbar-2-right .navbar-2-user-options .search-wrapper .search-icon {
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #6c757d;
+}
+.navbar-2 .container .navbar-2-right .navbar-2-user-options .buttons {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+.navbar-2 .container .navbar-2-right .navbar-2-user-options .buttons button i {
+  font-size: 20px;
+  color: var(--text-2);
+}
+.navbar-2 .container .navbar-2-right .navbar-2-user-options .buttons button.cart-button {
+  position: relative;
+  border: 1px solid var(--text-2);
+  padding: 6px 11px;
+  border-radius: 50%;
+}
+.navbar-2 .container .navbar-2-right .navbar-2-user-options .buttons button.cart-button #cart-count {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 300;
+  top: -5px;
+  right: -5px;
+  background-color: #feb81b;
+  border-radius: 50%;
 }
 
 ::-webkit-scrollbar {
