Add menu from other page

--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -2709,22 +2709,194 @@ span {
   align-items: center;
   justify-content: space-between;
 }
-.navbar-2 .container .navbar-2-right .navbar-2-menu {
-  display: flex;
-  align-items: center;
+.navbar-2 .container .navbar-2-right .main-menu ul {
+  margin-bottom: 0;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li {
+  position: relative;
   list-style: none;
+  display: inline-block;
+  margin-inline-end: 40px;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li:last-child {
+  margin-inline-end: 0;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li a {
+  display: inline-block;
+  font-size: 18px;
+  font-weight: 300;
   color: var(--text-2);
-  gap: 38px;
-}
-.navbar-2 .container .navbar-2-right .navbar-2-menu li a {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19.2px;
+  padding: 20px 0;
   text-align: left;
-  transition: all 0.3s ease-in-out;
+  position: relative;
+  text-transform: capitalize;
+  transition: all 0.4s ease-in-out;
 }
-.navbar-2 .container .navbar-2-right .navbar-2-menu li a:hover {
+.navbar-2 .container .navbar-2-right .main-menu ul li a i {
+  margin-left: 7px;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li a:hover {
+  color: #ffbf25 !important;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .submenu {
+  position: absolute;
+  top: 100%;
+  inset-inline-start: 0;
+  min-width: 240px;
+  background: var(--white);
+  z-index: 99999;
+  visibility: hidden;
+  opacity: 0;
+  transform-origin: top center;
+  color: var(--header);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+  transform: translateY(10px);
+  transition: all 0.4s ease-in-out;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .submenu li {
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .submenu li a {
+  position: relative;
+  z-index: 11;
+  font-size: 18px;
+  font-weight: 300;
+  color: var(--header);
+  padding: 0 25px;
+  padding-bottom: 11px;
+  padding-top: 11px;
+  width: 100%;
+  border-bottom: 1px solid #eeeeee;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .submenu li a:hover {
+  color: var(--white) !important;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .submenu li:last-child a {
+  border: none;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .submenu li .submenu {
+  inset-inline-start: 100%;
+  top: 0;
+  visibility: hidden;
+  opacity: 0;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .submenu li:hover > a {
+  background: var(--theme);
+  color: var(--white) !important;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .submenu li:hover > a::after {
   color: var(--theme);
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .submenu li:hover > .submenu {
+  -webkit-transform: translateY(1);
+  -moz-transform: translateY(1);
+  -ms-transform: translateY(1);
+  -o-transform: translateY(1);
+  transform: translateY(1);
+  visibility: visible;
+  opacity: 1;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .submenu li.has-dropdown > a::after {
+  position: absolute;
+  top: 50%;
+  inset-inline-end: 25px;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+  color: var(--theme);
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .has-homemenu {
+  width: 1000px;
+  padding: 30px 30px 10px 30px;
+  opacity: 0;
+  left: -250px;
+  visibility: hidden;
+  padding: 30px 30px 10px 30px;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .has-homemenu .homemenu-items {
+  padding-bottom: 20px;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .has-homemenu .homemenu-items .homemenu {
+  position: relative;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .has-homemenu .homemenu-items .homemenu .homemenu-thumb {
+  position: relative;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .has-homemenu .homemenu-items .homemenu .homemenu-thumb a {
+  padding: 0;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .has-homemenu .homemenu-items .homemenu .homemenu-thumb::before {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(20, 19, 19, 0)), to(#5e5ef6));
+  background: linear-gradient(to bottom, rgba(99, 92, 92, 0) 0%, #252527 100%);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  content: "";
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .has-homemenu .homemenu-items .homemenu .homemenu-thumb:hover::before {
+  visibility: visible;
+  opacity: 1;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .has-homemenu .homemenu-items .homemenu .homemenu-thumb:hover .demo-button {
+  opacity: 1;
+  visibility: visible;
+  margin-top: 0;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .has-homemenu .homemenu-items .homemenu .homemenu-thumb:hover .homemenu-btn {
+  opacity: 1;
+  visibility: visible;
+  bottom: 50%;
+  transform: translateY(50%);
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .has-homemenu .homemenu-items .homemenu .homemenu-thumb img {
+  width: 100%;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .has-homemenu .homemenu-items .homemenu .homemenu-title {
+  text-align: center !important;
+  margin: 15px auto 0;
+  font-family: "Kanit", sans-serif;
+  font-size: 16px;
+  text-transform: capitalize;
+  font-family: "Jost", sans-serif;
+  font-weight: 400;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .has-homemenu .homemenu-items .homemenu .homemenu-title a {
+  padding: 0;
+  width: initial;
+  font-size: 16px;
+  text-transform: capitalize;
+  font-family: "Jost", sans-serif;
+  font-weight: 500;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li .has-homemenu .homemenu-items .homemenu .homemenu-title a:hover {
+  color: var(--theme) !important;
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li:hover > a {
+  color: var(--theme);
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li:hover > a::after {
+  color: var(--theme);
+}
+.navbar-2 .container .navbar-2-right .main-menu ul li:hover > .submenu {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0px);
 }
 .navbar-2 .container .navbar-2-right .navbar-2-user-options {
   display: flex;
@@ -2739,6 +2911,9 @@ span {
   padding-left: 20px;
   padding-right: 40px;
 }
+.navbar-2 .container .navbar-2-right .navbar-2-user-options .search-wrapper .search-input::placeholder {
+  font-weight: 300;
+}
 .navbar-2 .container .navbar-2-right .navbar-2-user-options .search-wrapper .search-icon {
   position: absolute;
   right: 15px;
@@ -2751,17 +2926,17 @@ span {
   align-items: center;
   gap: 25px;
 }
-.navbar-2 .container .navbar-2-right .navbar-2-user-options .buttons button i {
+.navbar-2 .container .navbar-2-right .navbar-2-user-options .buttons a i {
   font-size: 20px;
   color: var(--text-2);
 }
-.navbar-2 .container .navbar-2-right .navbar-2-user-options .buttons button.cart-button {
+.navbar-2 .container .navbar-2-right .navbar-2-user-options .buttons a.cart-button {
   position: relative;
   border: 1px solid var(--text-2);
   padding: 6px 11px;
   border-radius: 50%;
 }
-.navbar-2 .container .navbar-2-right .navbar-2-user-options .buttons button.cart-button #cart-count {
+.navbar-2 .container .navbar-2-right .navbar-2-user-options .buttons a.cart-button #cart-count {
   position: absolute;
   width: 20px;
   height: 20px;
