--- a/main-files/assets/scss/_header.scss
+++ b/main-files/assets/scss/_header.scss
@@ -952,23 +952,233 @@
       align-items: center;
       justify-content: space-between;
 
-      .navbar-2-menu {
-        display: flex;
-        align-items: center;
-        list-style: none;
-        color: $text-color-2;
-        gap: 38px;
+      .main-menu {
+        ul {
+          margin-bottom: 0;
+          li {
+            position: relative;
+            list-style: none;
+            display: inline-block;
+            margin-inline-end: 40px;
 
-        li {
-          a {
-            font-size: 16px;
-            font-weight: 500;
-            line-height: 19.2px;
-            text-align: left;
-            transition: all 0.3s ease-in-out;
+            &:last-child {
+              margin-inline-end: 0;
+            }
+
+            a {
+              display: inline-block;
+              font-size: 18px;
+              font-weight: 300;
+              color: $text-color-2;
+              padding: 20px 0;
+              text-align: left;
+              position: relative;
+              text-transform: capitalize;
+              @include transition;
+
+              i {
+                margin-left: 7px;
+              }
+
+              &:hover {
+                color: #ffbf25 !important;
+              }
+            }
+            .submenu {
+              position: absolute;
+              top: 100%;
+              inset-inline-start: 0;
+              min-width: 240px;
+              background: $white;
+              z-index: 99999;
+              visibility: hidden;
+              opacity: 0;
+              transform-origin: top center;
+              color: $header-color;
+              box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+              -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+              -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+              transform: translateY(10px);
+              @include transition;
+
+              li {
+                display: block;
+                width: 100%;
+                margin: 0;
+                padding: 0;
+
+                a {
+                  position: relative;
+                  z-index: 11;
+                  font-size: 18px;
+                  font-weight: 300;
+                  color: $header-color;
+                  padding: 0 25px;
+                  padding-bottom: 11px;
+                  padding-top: 11px;
+                  width: 100%;
+                  border-bottom: 1px solid #eeeeee;
+
+                  &:hover {
+                    color: $white !important;
+                  }
+                }
+                &:last-child {
+                  a {
+                    border: none;
+                  }
+                }
+                .submenu {
+                  inset-inline-start: 100%;
+                  top: 0;
+                  visibility: hidden;
+                  opacity: 0;
+                }
+                &:hover {
+                  > a {
+                    background: $theme-color;
+                    color: $white !important;
+
+                    &::after {
+                      color: $theme-color;
+                    }
+                  }
+                  > .submenu {
+                    -webkit-transform: translateY(1);
+                    -moz-transform: translateY(1);
+                    -ms-transform: translateY(1);
+                    -o-transform: translateY(1);
+                    transform: translateY(1);
+                    visibility: visible;
+                    opacity: 1;
+                  }
+                }
+              }
+              li.has-dropdown {
+                > a {
+                  &::after {
+                    position: absolute;
+                    top: 50%;
+                    inset-inline-end: 25px;
+                    -webkit-transform: translateY(-50%);
+                    -moz-transform: translateY(-50%);
+                    -ms-transform: translateY(-50%);
+                    -o-transform: translateY(-50%);
+                    transform: translateY(-50%);
+                    color: $theme-color;
+                  }
+                }
+              }
+            }
+
+            .has-homemenu {
+              width: 1000px;
+              padding: 30px 30px 10px 30px;
+              opacity: 0;
+              left: -250px;
+              visibility: hidden;
+              padding: 30px 30px 10px 30px;
+
+              .homemenu-items {
+                padding-bottom: 20px;
+
+                .homemenu {
+                  position: relative;
+                  .homemenu-thumb {
+                    position: relative;
+
+                    a {
+                      padding: 0;
+                    }
+
+                    &::before {
+                      background: -webkit-gradient(
+                        linear,
+                        left top,
+                        left bottom,
+                        from(rgba(20, 19, 19, 0)),
+                        to(#5e5ef6)
+                      );
+                      background: linear-gradient(
+                        to bottom,
+                        rgba(99, 92, 92, 0) 0%,
+                        #252527 100%
+                      );
+                      background-repeat: no-repeat;
+                      background-size: cover;
+                      background-position: center;
+                      width: 100%;
+                      height: 100%;
+                      position: absolute;
+                      left: 0;
+                      top: 0;
+                      overflow: hidden;
+                      opacity: 0;
+                      -webkit-transition: all 0.3s ease-in-out;
+                      transition: all 0.3s ease-in-out;
+                      content: "";
+                    }
+                    &:hover {
+                      &::before {
+                        visibility: visible;
+                        opacity: 1;
+                      }
+
+                      .demo-button {
+                        opacity: 1;
+                        visibility: visible;
+                        margin-top: 0;
+                      }
+                      & .homemenu-btn {
+                        opacity: 1;
+                        visibility: visible;
+                        bottom: 50%;
+                        transform: translateY(50%);
+                      }
+                    }
+                    img {
+                      width: 100%;
+                    }
+                  }
+
+                  .homemenu-title {
+                    text-align: center !important;
+                    margin: 15px auto 0;
+                    font-family: $body-font;
+                    font-size: 16px;
+                    text-transform: capitalize;
+                    font-family: $heading-font;
+                    font-weight: 400;
+
+                    a {
+                      padding: 0;
+                      width: initial;
+                      font-size: 16px;
+                      text-transform: capitalize;
+                      font-family: $heading-font;
+                      font-weight: 500;
+
+                      &:hover {
+                        color: $theme-color !important;
+                      }
+                    }
+                  }
+                }
+              }
+            }
 
             &:hover {
-              color: $theme-color;
+              > a {
+                color: $theme-color;
+                &::after {
+                  color: $theme-color;
+                }
+              }
+              > .submenu {
+                visibility: visible;
+                opacity: 1;
+                transform: translateY(0px);
+              }
             }
           }
         }
@@ -986,6 +1196,10 @@
             border-radius: 50px;
             padding-left: 20px;
             padding-right: 40px;
+
+            &::placeholder {
+              font-weight: 300;
+            }
           }
 
           .search-icon {
@@ -1002,7 +1216,7 @@
           align-items: center;
           gap: 25px;
 
-          button {
+          a {
             i {
               font-size: 20px;
               color: $text-color-2;
