--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -8302,4 +8302,21 @@ span {
   margin-top: 30px;
 }
 
+.offer-4-wrapper {
+  max-width: 1800px;
+  height: 75px;
+  display: flex;
+  align-items: center;
+  background: linear-gradient(90deg, #ff4035 0%, var(--theme2) 100%);
+  border-radius: 40px;
+  color: var(--white);
+  gap: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  justify-content: space-between;
+}
+.offer-4-wrapper i {
+  font-size: 16px;
+}
+
 /*# sourceMappingURL=main.css.map */
