--- a/main-files/assets/scss/main.scss
+++ b/main-files/assets/scss/main.scss
@@ -84,4 +84,6 @@ Version: 1.0.0
 @import "order-details";
 // >> Settings <<//
 @import "settings";
+// >> Offer <<//
+@import "offer";
 //>> Template Section Style End <<//
