--- a/main-files/assets/scss/main.scss
+++ b/main-files/assets/scss/main.scss
@@ -86,4 +86,6 @@ Version: 1.0.0
 @import "settings";
 // >> Offer <<//
 @import "offer";
+// >> Category <<//
+@import "category";
 //>> Template Section Style End <<//
