--- a/main-files/assets/scss/_offer.scss
+++ b/main-files/assets/scss/_offer.scss
@@ -10,6 +10,7 @@
   padding-left: 40px;
   padding-right: 40px;
   justify-content: space-between;
+  min-width: 1700px;
 
   i {
     font-size: 16px;
