--- a/main-files/assets/scss/_category.scss
+++ b/main-files/assets/scss/_category.scss
@@ -8,6 +8,7 @@
     .category-4-container {
       display: flex;
       align-items: center;
+      justify-content: space-between;
       gap: 30px;
 
       .category-4-item {
