--- a/main-files/assets/scss/main.scss
+++ b/main-files/assets/scss/main.scss
@@ -88,4 +88,6 @@ Version: 1.0.0
 @import "offer";
 // >> Category <<//
 @import "category";
+// >> Video <<//
+@import "video";
 //>> Template Section Style End <<//
