--- a/main-files/assets/scss/_variables.scss
+++ b/main-files/assets/scss/_variables.scss
@@ -15,6 +15,7 @@
   --bg: #f4f6fa;
   --box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.06);
   --footer: #0a111e;
+  --max-width: 1380px;
 }
 
 // Theme Color - Default Colors
@@ -33,3 +34,4 @@ $bg-color: var(--bg);
 $shadow: var(--box-shadow);
 $footer-3: var(--footer);
 $theme-fade-2: var(--theme-fade-2);
+$max-width: var(--max-width);
